src/test/resources/30/expanded/valid/wasteland-otf/EPUB/wasteland-nav.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"
	xmlns:epub="http://www.idpf.org/2007/ops">
	<head>
		<meta charset="utf-8"></meta>		
		<link rel="stylesheet" type="text/css" href="wasteland.css" class="day" title="day"/> 
		<link rel="alternate stylesheet" type="text/css" href="wasteland-night.css" class="night" title="night"/>		
	</head>
	<body>
		<nav epub:type="toc" id="toc">			
			<ol>
				<li><a href="wasteland-content.xhtml#ch1">I. THE BURIAL OF THE DEAD</a></li>
				<li><a href="wasteland-content.xhtml#ch2">II. A GAME OF CHESS</a></li>
				<li><a href="wasteland-content.xhtml#ch3">III. THE FIRE SERMON</a></li>
				<li><a href="wasteland-content.xhtml#ch4">IV. DEATH BY WATER</a></li>
				<li><a href="wasteland-content.xhtml#ch5">V. WHAT THE THUNDER SAID</a></li>
				<li><a href="wasteland-content.xhtml#rearnotes">NOTES ON "THE WASTE LAND"</a></li>
			</ol>			
		</nav>
		<nav epub:type="landmarks">
			<ol>
				<li><a epub:type="frontmatter" href="wasteland-content.xhtml#frontmatter"
						>frontmatter</a></li>
				<li><a epub:type="bodymatter" href="wasteland-content.xhtml#bodymatter"
						>bodymatter</a></li>
				<li><a epub:type="backmatter" href="wasteland-content.xhtml#backmatter"
						>backmatter</a></li>
			</ol>
		</nav>

	</body>
</html>
