src/test/resources/30/expanded/invalid/lorem-basic-switch/EPUB/wasteland-nav.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"
	xmlns:epub="http://www.idpf.org/2007/ops">
	<head>
		<link type="text/css" rel="stylesheet" href="wasteland.css" />
	</head>
	<body>
		<nav epub:type="toc" id="toc">
			<h1>Table of contents</h1>
			<ol>
				<li><a href="wasteland-content.xhtml#ch1">I. THE BURIAL OF THE DEAD</a></li>
				<li><a href="wasteland-content.xhtml#ch2">II. A GAME OF CHESS</a></li>
				<li><a href="wasteland-content.xhtml#ch3">III. THE FIRE SERMON</a></li>
				<li><a href="wasteland-content.xhtml#ch4">IV. DEATH BY WATER</a></li>
				<li><a href="wasteland-content.xhtml#ch5">V. WHAT THE THUNDER SAID</a></li>
				<li><a href="wasteland-content.xhtml#backmatter">NOTES ON "THE WASTE LAND"</a></li>
			</ol>
		</nav>
		<nav epub:type="landmarks">
			<ol>
				<li><a epub:type="frontmatter" href="wasteland-content.xhtml#frontmatter"
						>frontmatter</a></li>
				<li><a epub:type="bodymatter" href="wasteland-content.xhtml#bodymatter"
						>bodymatter</a></li>
				<li><a epub:type="backmatter" href="wasteland-content.xhtml#bodymatter"
						>rearmatter</a></li>
			</ol>
		</nav>

	</body>
</html>
